RESOLVED FIXED206357
REGRESSION: ( r 254668 ) [ Mac Debug wk2 ] 21 http/tests/navigation/* tests are crashing with ASSERTION FAILED: world.first != 1
https://bugs.webkit.org/show_bug.cgi?id=206357
Summary REGRESSION: ( r 254668 ) [ Mac Debug wk2 ] 21 http/tests/navigation/* tests a...
Truitt Savell
Reported 2020-01-16 08:11:24 PST
21 http/tests/navigation/* tests are crashing with ASSERTION FAILED: world.first != 1 Description: It looks like the changes in https://trac.webkit.org/changeset/254668/webkit have caused Assertion crashes on these tests results: https://build.webkit.org/results/Apple-Catalina-Debug-WK2-Tests/r254668%20(1726)/results.html Build: https://build.webkit.org/builders/Apple-Catalina-Debug-WK2-Tests/builds/1726 example: ASSERTION FAILED: world.first != 1 /Volumes/Data/slave/catalina-debug/build/Source/WebKit/WebProcess/UserContent/WebUserContentController.cpp(106) : void WebKit::WebUserContentController::addUserContentWorld(const std::pair<uint64_t, String> &) 1 0x1e5e6fa79 WTFCrash 2 0x1c00020db WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1c133dd02 WebKit::WebUserContentController::addUserContentWorld(std::__1::pair<unsigned long long, WTF::String> const&)
Attachments
Patch (14.00 KB, patch)
2020-01-16 10:15 PST, Brady Eidson
no flags
Patch (11.02 KB, patch)
2020-01-16 10:25 PST, Brady Eidson
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-16 08:11:47 PST
Brady Eidson
Comment 2 2020-01-16 09:02:13 PST
Have a debug build locally, seeing if I can repro
Brady Eidson
Comment 3 2020-01-16 10:02:28 PST
Easy repro, easy fix.
Brady Eidson
Comment 4 2020-01-16 10:15:49 PST
Brady Eidson
Comment 5 2020-01-16 10:25:52 PST
WebKit Commit Bot
Comment 6 2020-01-16 11:17:52 PST
Comment on attachment 387931 [details] Patch Clearing flags on attachment: 387931 Committed r254698: <https://trac.webkit.org/changeset/254698>
WebKit Commit Bot
Comment 7 2020-01-16 11:17:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.