Source/WebKit/Shared/ContentWorldShared.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 Apple Inc. All rights reserved.
+ * Copyright (C) 2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -23,44 +23,10 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#include "config.h"
-#include "APIUserContentWorld.h"
+#pragma once
 
-#include "ContentWorldShared.h"
+namespace WebKit {
 
-namespace API {
+static const uint64_t pageContentWorldIdentifier = 1;
 
-uint64_t UserContentWorld::generateIdentifier()
-{
-    static uint64_t identifier = WebKit::pageContentWorldIdentifier;
-
-    return ++identifier;
-}
-
-Ref<UserContentWorld> UserContentWorld::worldWithName(const WTF::String& name)
-{
-    return adoptRef(*new UserContentWorld(name));
-}
-
-UserContentWorld& UserContentWorld::normalWorld()
-{
-    static UserContentWorld* world = new UserContentWorld(ForNormalWorldOnly::NormalWorld);
-    return *world;
-}
-
-UserContentWorld::UserContentWorld(const WTF::String& name)
-    : m_identifier(generateIdentifier())
-    , m_name(name)
-{
-}
-
-UserContentWorld::UserContentWorld(ForNormalWorldOnly)
-    : m_identifier(WebKit::pageContentWorldIdentifier)
-{
-}
-
-UserContentWorld::~UserContentWorld()
-{
-}
-
-} // namespace API
+} // namespace WebKit
